# YelpRecommenderSystem

./: .gitignore  README.md  pyproject.toml  yelp_recommender.ipynb
report/: biblio.bib  main.tex
